--- a/requirements.in
+++ b/requirements.in
@@ -12,7 +12,7 @@ Pillow==6.2.2
 psycopg2==2.8.6
 pytz==2020.1
 scipy==1.4.1
-scikit-learn==0.22
+scikit-learn==0.22.2post1
 six==1.15.0
 static3==0.7.0
 tzlocal==2.0.0
